Avoid bug serving_client with pathlib, example use paddle_edl
Signed-off-by: WangXi <wangxi16@baidu.com>

--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -41,7 +41,7 @@ if os.getenv("PADDLE_EDL_VERSION"):
 max_version, mid_version, min_version = python_version()
 
 REQUIRED_PACKAGES = [
-    'six >= 1.10.0', 'protobuf >= 3.1.0', "flask", "pathlib"
+    'six >= 1.10.0', 'protobuf >= 3.1.0', "flask", "pathlib2"
 ]
 
 packages=['paddle_edl', 
